log
Sat 18 May 2024 06:18:41 AM UTC: 
 tests:  0|5
total_score: 0/70
ce8024e
Sat 18 May 2024 06:25:25 AM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
88e1b22
Sat 18 May 2024 06:43:15 AM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:28: error: too many arguments to function ‘is_valid’
   64 |                         if(is_valid(n, i, j, num))
      |                            ^~~~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
Compilation failed
dca20f0
Sat 18 May 2024 06:50:02 AM UTC: 
 sudoku.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
c85b97d
Sat 18 May 2024 06:53:42 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
e6460c1
Sat 18 May 2024 06:59:05 AM UTC: 
 sudoku.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e803d41
Sun 19 May 2024 02:17:05 AM UTC: 
 sudoku.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
In file included from test.c:5:
sudoku.c:85:19: error: unused variable ‘aux2’ [-Werror=unused-variable]
   85 |    int aux1 = -1, aux2 = -1;
      |                   ^~~~
sudoku.c:85:8: error: unused variable ‘aux1’ [-Werror=unused-variable]
   85 |    int aux1 = -1, aux2 = -1;
      |        ^~~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa7abbe
Sun 19 May 2024 02:17:32 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:85:19: error: unused variable ‘aux2’ [-Werror=unused-variable]
   85 |    int aux1 = -1, aux2 = -1;
      |                   ^~~~
sudoku.c:85:8: error: unused variable ‘aux1’ [-Werror=unused-variable]
   85 |    int aux1 = -1, aux2 = -1;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
c0f6b2a
Sun 19 May 2024 02:17:55 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
c1d69e5
Sun 19 May 2024 02:21:28 AM UTC: 
 sudoku.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
37dd0ab
Sun 19 May 2024 02:58:28 AM UTC: 
 sudoku.c | 25 ++++++++++++++++---------
 1 file changed, 16 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
507ebb3
